--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="css/app.css" />
     <title>Hero Sections - Tailwind UI</title>
 </head>
 
@@ -131,8 +131,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/combine/npm/highlightjs@9.16.2/highlight.pack.min.js,npm/axios@0.19.2/dist/axios.min.js,npm/dlv@1.1.3/dist/dlv.umd.min.js,gh/alpinejs/alpine@v2.2.1/dist/alpine.js,npm/fuse.js@5.0.9-beta/dist/fuse.min.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/prism.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/prism.js"></script>
 </body>
 
 </html>
